--- a/app/src/main/res/layout/dialog_remove_asset.xml
+++ b/app/src/main/res/layout/dialog_remove_asset.xml
@@ -4,7 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp"
     >
 
   <androidx.core.widget.NestedScrollView
@@ -19,122 +18,130 @@
         android:padding="8dp"
         >
 
-  <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/number_of_stock"
-      app:layout_constraintBottom_toBottomOf="@+id/textInputLayout1"
-      app:layout_constraintEnd_toStartOf="@+id/guideline1"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="@+id/textInputLayout1"
-      app:layout_constraintHorizontal_bias="0.0"
-      />
-  <com.google.android.material.textfield.TextInputLayout
-      android:id="@+id/textInputLayout1"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_margin="8dp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="@+id/guideline1"
-      app:layout_constraintTop_toTopOf="parent"
-      app:endIconMode="clear_text"
-      >
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/removeQuantity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/textInputEditText"
-        android:digits="0123456789.,"
-        android:gravity="end"
-        android:imeOptions="actionDone"
-        android:inputType="numberDecimal"
-        android:maxLength="9"
-        android:maxLines="1"
-        android:nextFocusDown="@+id/price"
-        android:nextFocusForward="@+id/price"
-        android:textAlignment="textEnd"
-        />
-  </com.google.android.material.textfield.TextInputLayout>
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="@string/number_of_stock"
+          app:layout_constraintBottom_toBottomOf="@+id/textInputLayout1"
+          app:layout_constraintEnd_toStartOf="@+id/guideline1"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="@+id/textInputLayout1"
+          app:layout_constraintHorizontal_bias="0.0"
+          />
+      <com.google.android.material.textfield.TextInputLayout
+          android:id="@+id/textInputLayout1"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_margin="8dp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toEndOf="@+id/guideline1"
+          app:layout_constraintTop_toTopOf="parent"
+          app:endIconMode="clear_text"
+          >
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/removeQuantity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/textInputEditText"
+            android:digits="0123456789.,"
+            android:gravity="end"
+            android:imeOptions="actionDone"
+            android:inputType="numberDecimal"
+            android:maxLength="9"
+            android:maxLines="1"
+            android:nextFocusDown="@+id/price"
+            android:nextFocusForward="@+id/price"
+            android:textAlignment="textEnd"
+            />
+      </com.google.android.material.textfield.TextInputLayout>
 
-  <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/remove_price"
-      app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
-      app:layout_constraintEnd_toStartOf="@+id/guideline1"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="@+id/textInputLayout2"
-      app:layout_constraintHorizontal_bias="0.0"
-      />
-  <com.google.android.material.textfield.TextInputLayout
-      android:id="@+id/textInputLayout2"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_margin="8dp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="@+id/guideline1"
-      app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
-      app:endIconMode="clear_text"
-      >
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/removePrice"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/textInputEditText"
-        android:digits="0123456789.,"
-        android:gravity="end"
-        android:imeOptions="actionDone"
-        android:inputType="numberDecimal"
-        android:maxLength="9"
-        android:maxLines="1"
-        android:textAlignment="textEnd"
-        />
-  </com.google.android.material.textfield.TextInputLayout>
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="@string/remove_price"
+          app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
+          app:layout_constraintEnd_toStartOf="@+id/guideline1"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="@+id/textInputLayout2"
+          app:layout_constraintHorizontal_bias="0.0"
+          />
+      <com.google.android.material.textfield.TextInputLayout
+          android:id="@+id/textInputLayout2"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_margin="8dp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toEndOf="@+id/guideline1"
+          app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
+          app:endIconMode="clear_text"
+          >
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/removePrice"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/textInputEditText"
+            android:digits="0123456789.,"
+            android:gravity="end"
+            android:imeOptions="actionDone"
+            android:inputType="numberDecimal"
+            android:maxLength="9"
+            android:maxLines="1"
+            android:textAlignment="textEnd"
+            />
+      </com.google.android.material.textfield.TextInputLayout>
 
-  <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/note"
-      app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
-      app:layout_constraintEnd_toStartOf="@+id/guideline1"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="@+id/textInputLayout3"
-      app:layout_constraintHorizontal_bias="0.0"
-      />
-  <com.google.android.material.textfield.TextInputLayout
-      android:id="@+id/textInputLayout3"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_margin="8dp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="@+id/guideline1"
-      app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
-      app:endIconMode="clear_text"
-      >
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/removeNote"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/textInputEditText"
-        android:inputType="textMultiLine"
-        />
-  </com.google.android.material.textfield.TextInputLayout>
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="@string/note"
+          app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
+          app:layout_constraintEnd_toStartOf="@+id/guideline1"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="@+id/textInputLayout3"
+          app:layout_constraintHorizontal_bias="0.0"
+          />
+      <com.google.android.material.textfield.TextInputLayout
+          android:id="@+id/textInputLayout3"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_margin="8dp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toEndOf="@+id/guideline1"
+          app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
+          app:endIconMode="clear_text"
+          >
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/removeNote"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/textInputEditText"
+            android:inputType="textMultiLine"
+            />
+      </com.google.android.material.textfield.TextInputLayout>
 
-  <com.thecloudsite.stockroom.CustomDatePicker
-      android:id="@+id/datePickerAssetDate"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="16dp"
-      android:datePickerMode="calendar"
-      app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
-      />
+      <com.thecloudsite.stockroom.CustomDatePicker
+          android:id="@+id/datePickerAssetDate"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="16dp"
+          android:datePickerMode="calendar"
+          app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
+          />
 
-  <androidx.constraintlayout.widget.Barrier
-      android:id="@+id/guideline1"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      app:barrierDirection="start"
-      />
+      <com.thecloudsite.stockroom.CustomTimePicker
+          android:id="@+id/datePickerAssetTime"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:timePickerMode="clock"
+          app:layout_constraintTop_toBottomOf="@+id/datePickerAssetDate"
+          />
+
+      <androidx.constraintlayout.widget.Barrier
+          android:id="@+id/guideline1"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          app:barrierDirection="start"
+          />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
