--- a/app/src/main/res/layout/dialog_add_event.xml
+++ b/app/src/main/res/layout/dialog_add_event.xml
@@ -36,6 +36,7 @@
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toEndOf="@+id/guideline1"
           app:layout_constraintTop_toTopOf="parent"
+          app:endIconMode="clear_text"
           >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputEditEventTitle"
@@ -65,6 +66,7 @@
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toEndOf="@+id/guideline1"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
+          app:endIconMode="clear_text"
           >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputEditEventNote"
