--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -127,10 +127,21 @@ limitations under the License. -->
     <item name="android:layout_marginBottom">16dp</item>
     <item name="android:background">?android:attr/listDivider</item>
   </style>
+
   <style name="section_header">
     <item name="android:textStyle">bold</item>
     <item name="android:textColor">@color/colorAccent</item>
     <item name="android:layout_marginStart">16dp</item>
     <item name="android:layout_marginEnd">16dp</item>
   </style>
+
+  <style name="calc_style">
+    <item name="android:layout_width">0dp</item>
+    <item name="android:layout_height">0dp</item>
+    <item name="android:layout_margin">4dp</item>
+    <item name="android:textSize">24sp</item>
+    <item name="android:layout_gravity">center_horizontal</item>
+    <item name="android:background">@color/common_google_signin_btn_text_light_default</item>
+  </style>
+
 </resources>
