--- a/app/src/main/res/layout/calc_item.xml
+++ b/app/src/main/res/layout/calc_item.xml
@@ -10,7 +10,7 @@
       android:id="@+id/calclinePrefix"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:orientation="vertical"
+      android:textSize="20sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toStartOf="@+id/guideline1"
       app:layout_constraintStart_toStartOf="parent"
@@ -22,6 +22,7 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_margin="4dp"
+      android:textSize="20sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline1"
       app:layout_constraintTop_toTopOf="parent"
