--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -1,50 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="4dp"
     >
 
-  <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/calclines"
-      android:layout_width="match_parent"
-      android:layout_height="0dp"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintBottom_toTopOf="@+id/guidelineY1"
-      />
-
   <TextView
       android:id="@+id/calc_enter"
       android:text="ENTER"
-      style="@style/calc_style"
-      app:layout_constraintStart_toEndOf="@id/guidelineX1"
-      app:layout_constraintEnd_toStartOf="@id/guidelineX3"
-      app:layout_constraintTop_toBottomOf="@+id/guidelineY1"
       app:layout_constraintBottom_toTopOf="@id/guidelineY2"
+      app:layout_constraintEnd_toStartOf="@id/guidelineX3"
+      app:layout_constraintStart_toEndOf="@id/guidelineX1"
+      app:layout_constraintTop_toBottomOf="@+id/guidelineY1"
+      style="@style/calc_style"
       />
 
   <TextView
       android:id="@+id/calc_1"
       android:text="1"
-      style="@style/calc_style"
-      app:layout_constraintStart_toEndOf="@id/guidelineX1"
-      app:layout_constraintEnd_toStartOf="@id/guidelineX2"
-      app:layout_constraintTop_toBottomOf="@+id/guidelineY2"
       app:layout_constraintBottom_toTopOf="@id/guidelineY3"
+      app:layout_constraintEnd_toStartOf="@id/guidelineX2"
+      app:layout_constraintStart_toEndOf="@id/guidelineX1"
+      app:layout_constraintTop_toBottomOf="@+id/guidelineY2"
+      style="@style/calc_style"
+      />
+
+  <TextView
+      android:id="@+id/calc_2"
+      android:text="2"
+      app:layout_constraintBottom_toTopOf="@id/guidelineY3"
+      app:layout_constraintEnd_toStartOf="@id/guidelineX3"
+      app:layout_constraintStart_toEndOf="@id/guidelineX2"
+      app:layout_constraintTop_toBottomOf="@+id/guidelineY2"
+      style="@style/calc_style"
+      />
+
+  <TextView
+      android:id="@+id/calc_3"
+      android:text="3"
+      app:layout_constraintBottom_toTopOf="@id/guidelineY3"
+      app:layout_constraintEnd_toStartOf="@id/guidelineX4"
+      app:layout_constraintStart_toEndOf="@id/guidelineX3"
+      app:layout_constraintTop_toBottomOf="@+id/guidelineY2"
+      style="@style/calc_style"
       />
 
   <TextView
       android:id="@+id/calc_plus"
       android:text="+"
-      style="@style/calc_style"
-      app:layout_constraintStart_toEndOf="@id/guidelineX2"
-      app:layout_constraintEnd_toStartOf="@id/guidelineX3"
-      app:layout_constraintTop_toBottomOf="@+id/guidelineY2"
       app:layout_constraintBottom_toTopOf="@id/guidelineY3"
+      app:layout_constraintEnd_toStartOf="@id/guidelineX5"
+      app:layout_constraintStart_toEndOf="@id/guidelineX4"
+      app:layout_constraintTop_toBottomOf="@+id/guidelineY2"
+      style="@style/calc_style"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -93,6 +102,32 @@
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintGuide_begin="200dp"
+      />
+
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guidelineX4"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      app:layout_constraintGuide_begin="250dp"
+      />
+
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guidelineX5"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      app:layout_constraintGuide_begin="300dp"
+      />
+
+  <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/calclines"
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      app:layout_constraintBottom_toTopOf="@+id/guidelineY1"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
