--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -139,9 +139,11 @@ limitations under the License. -->
     <item name="android:layout_width">0dp</item>
     <item name="android:layout_height">0dp</item>
     <item name="android:layout_margin">4dp</item>
+    <item name="android:padding">4dp</item>
     <item name="android:textSize">24sp</item>
+    <item name="android:textColor">#FFFFFF</item>
     <item name="android:layout_gravity">center</item>
-    <item name="android:background">@color/common_google_signin_btn_text_light_default</item>
+    <item name="android:background">@drawable/calc_roundcorner</item>
   </style>
 
 </resources>
