--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -86,4 +86,24 @@
     <item>2</item>
     <item>3</item>
   </string-array>
+  <string-array name="calc_format_displayed_decimals">
+    <item>2 (3.14)</item>
+    <item>8 (3.14159265)</item>
+    <item>Max (3.141592653589793238)</item>
+  </string-array>
+  <string-array translatable="false" name="calc_format_displayed_decimals_values">
+    <item>0</item>
+    <item>1</item>
+    <item>2</item>
+  </string-array>
+  <string-array name="calc_format_decimal_separator">
+    <item>System default</item>
+    <item>.</item>
+    <item>,</item>
+  </string-array>
+  <string-array translatable="false" name="calc_format_decimal_separator_values">
+    <item>0</item>
+    <item>1</item>
+    <item>2</item>
+  </string-array>
 </resources>
